# USM_src_code

./: CMakeLists.txt  LICENSE  README.md  emit_usm_exe.c  main.cpp
src/: cursor.cpp  debug_menu.cpp  debug_menu.h  debug_menu_extra.cpp  debug_render.cpp  debug_render.h  fe_menu_nav_bar.h  femenu.cpp  femenusystem.cpp  femenusystem.h  fetext.cpp  frontendmenusystem.cpp  game.cpp  game.h  game_settings.cpp  gamepad_menu.h  gamepadinput.h  global_text_enum.cpp  global_text_enum.h  igozoomoutmap.cpp  igozoomoutmap.h  ini_parser.cpp  ini_parser.h  input_mgr.cpp  localized_string_table.cpp  localized_string_table.h  ltd_edition.cpp  ltd_edition.h  matrix4x4.h  memoryunitmanager.cpp  memoryunitmanager.h  mesh_file_resource_handler.cpp  mission_manager.cpp  mission_manager.h  mission_stack_manager.cpp  mission_stack_manager.h  mouselook_controller.cpp  moved_entities.cpp  msimpletemplates.h  mstring.cpp  (+26 more)
src/audio/: wav_pcm16.cpp  wav_pcm16.h
src/nal/include/common/: nal_skeleton.h
src/nal/source/common/: nal_skeleton.cpp
src/utility/: desktop.ini  mod.h
src/variables/: variables.cpp  variables.h
